--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,10 +4,18 @@
 
 html,
 body {
-  padding: 0;
+  /* padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
+    margin: 0;
+    font-family: "IBM Plex Sans",sans-serif;
+    font-size: .9rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #495057;
+    text-align: left;
+    background-color: #f5f6f8;
 }
 
 a {
